// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connect: start 1`] = `
<div>
  <div
    className="test"
  >
    message 1
  </div>
  <div
    className="test"
  >
    updated message 2
  </div>
</div>
`;

exports[`connect: start 2`] = `
<div>
  <div
    className="test"
  >
    message 1
  </div>
  <div
    className="test"
  >
    updated message 2
  </div>
</div>
`;

exports[`connect: update 1`] = `
<div>
  <div
    className="test"
  >
    message 1
  </div>
  <div
    className="test"
  >
    updated message 3
  </div>
</div>
`;

exports[`connect: update 2`] = `
<div>
  <div
    className="test"
  >
    message 1
  </div>
  <div
    className="test"
  >
    updated message 3
  </div>
</div>
`;

exports[`wire types: update 1`] = `
<div>
  <div
    className="test"
  >
    one
  </div>
  <div
    className="test"
  >
    two
  </div>
</div>
`;

exports[`wire: start 1`] = `
<div>
  <div
    className="test"
  >
    message 1
  </div>
  <div
    className="test"
  >
    updated message 2
  </div>
</div>
`;

exports[`wire: update 1`] = `
<div>
  <div
    className="test"
  >
    message 1
  </div>
  <div
    className="test"
  >
    updated message 3
  </div>
</div>
`;
